--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: zurich-weather-app
-        image: okeyobia/gitops-k8s-deployments:1.0
+        image: okeyobia/gitops-k8s-deployments:latest
         ports:
         - containerPort: 8080
         # resources:
