--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add deployment.yaml
+          git add ./deployment/deployment.yaml
           git commit -m "Update image tag to ${{ steps.meta.outputs.tags }}"
           git push
           
