--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -8,44 +8,50 @@ on:
 
 jobs:
   push_to_registry:
-    name: Push Docker image to Docker Hub
+    name: Build, Push Docker image and Update Deployment
     runs-on: ubuntu-latest
+
     steps:
+      # 1️⃣ Checkout repository
       - name: Check out the repo
         uses: actions/checkout@v4
 
+      # 2️⃣ Log in to Docker Hub
       - name: Log in to Docker Hub
-        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
-        with:
-          images: okeyobia/gitops-app
-          tags: |
-            type=sha,prefix={{branch}}-,format=short
-            
-      - name: Update deployment manifest
-        run: |
-          TAG=${{ steps.meta.outputs.tags }}
-          sed -i "s|image: okeyobia/gitops-app:.*|image: ${TAG}|g" ./deployment/deployment.yaml
-          
-      - name: Commit and push changes
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add ./deployment/deployment.yaml
-          git commit -m "Update image tag to ${{ steps.meta.outputs.tags }}"
-          git push
-          
-      - name: Build and push Docker image
-        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+      # 3️⃣ Extract Git SHA for tagging
+      - name: Set Git SHA
+        id: gitsha
+        run: echo "SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+
+      # 4️⃣ Build and push Docker image
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v5
         with:
           context: .
           file: ./src/dockerfile
           push: true
-          tags:  ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: okeyobia/gitops-app:${{ env.SHA }}
+
+      # 5️⃣ Update deployment.yaml in dev directory
+      - name: Update deployment manifest
+        run: |
+          DEPLOY_FILE=dev/deployment.yaml
+          IMAGE_TAG=okeyobia/gitops-app:${{ env.SHA }}
+          # Replace the image tag
+          sed -i "s|image: .*|image: $IMAGE_TAG|" $DEPLOY_FILE
+
+      # 6️⃣ Commit and push updated deployment.yaml
+      - name: Commit and push changes
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add dev/deployment.yaml
+          git commit -m "Update deployment image to ${{ env.SHA }}" || echo "No changes to commit"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
