--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -40,7 +40,7 @@ jobs:
       # 5️⃣ Update deployment.yaml in dev directory
       - name: Update deployment manifest
         run: |
-          DEPLOY_FILE=dev/deployment.yaml
+          DEPLOY_FILE=deployment/deployment.yaml
           IMAGE_TAG=okeyobia/gitops-app:${{ env.SHA }}
           # Replace the image tag
           sed -i "s|image: .*|image: $IMAGE_TAG|" $DEPLOY_FILE
@@ -50,7 +50,7 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add dev/deployment.yaml
+          git add deployment/deployment.yaml
           git commit -m "Update deployment image to ${{ env.SHA }}" || echo "No changes to commit"
           git push
         env:
