--- a/src/package.json
+++ b/src/package.json
@@ -4,7 +4,7 @@
     "description": "A simple web app displaying temperature charts from CSV data",
     "main": "server.js",
     "scripts": {
-      "start": "node server.js"
+      "start": "node src/server.js"
     },
     "dependencies": {
       "express": "^4.17.1"
