--- a/src/package.json
+++ b/src/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "temperature-chart-app",
+    "name": "zurich-weather-app",
     "version": "1.0.0",
     "description": "A simple web app displaying temperature charts from CSV data",
-    "main": "server.js",
+    "main": "src/server.js",
     "scripts": {
       "start": "node src/server.js"
     },
