--- a/src/dockerfile
+++ b/src/dockerfile
@@ -1,12 +1,12 @@
 # Use an official Node.js runtime as a parent image
-FROM node:18-alpine
+FROM node:18
 
 # Set the working directory
 WORKDIR /usr/src/app
 
 # Copy package.json and install dependencies
 COPY package*.json ./
-RUN npm install
+RUN npm install --verbose
 
 # Bundle app source
 COPY . .
