update from dockerfile npm install

--- a/src/dockerfile
+++ b/src/dockerfile
@@ -1,18 +1,16 @@
-# Use an official Node.js runtime as a parent image
 FROM node:18
 
-# Set the working directory
 WORKDIR /usr/src/app
 
-# Copy package.json and install dependencies
 COPY package*.json ./
+
+# Install dependencies with verbose output for debugging
 RUN npm install --verbose
 
-# Bundle app source
 COPY . .
 
-# Expose the port the app runs on
 EXPOSE 3000
 
-# Define the command to run the app
-CMD ["node", "src/server.js"]
+CMD ["npm", "start"]
+# CMD ["node", "server.js"]
+# CMD ["node", "src/server.js"]
