path update dockerfile

--- a/src/dockerfile
+++ b/src/dockerfile
@@ -12,6 +12,6 @@ COPY src/ .
 
 EXPOSE 3000
 
-CMD ["npm", "start"]
+# CMD ["npm", "start"]
 # CMD ["node", "server.js"]
-# CMD ["node", "src/server.js"]
+CMD ["node", "src/server.js"]
